# image-text-translator

./: .env.example  .gitignore  CLAUDE.md  README.md  dummy_reviews.csv  jp_layout.py  localize_reviews.py  pyproject.toml  qa.py  review_card.py  sample_reviews.csv  sample_reviews_ko.csv  translate_image.py
.github/workflows/: ci.yml
docs/: validation.md
evals/: __init__.py  evaluate_run.py
localization/: __init__.py  contracts.py  openai_gateway.py  pipeline.py  prompts.py
scripts/: publish_actual_example.py
slots/: best_review_ba.json  best_review_quote.json  customer_review.json  customer_review_ba.json  customer_review_left.json  customer_voice.json  headline.json  real_voice.json  user_review.json  user_voice.json
tests/: test_batch_validation.py  test_evaluate_run.py  test_jp_layout.py  test_localization_pipeline.py  test_localize_reviews.py  test_prompts.py
