[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "image-text-translator"
version = "0.2.0"
description = "LLM-assisted Korean-to-Japanese review localization and deterministic image rendering"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26,<2",
  "openai>=2.0,<3",
  "pillow==9.5.0",
  "pydantic>=2.12,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.15,<1",
]
inpaint = ["IOPaint==1.6.0"]

[project.scripts]
localize-reviews = "localize_reviews:main"
render-review-cards = "review_card:main"

[tool.setuptools]
py-modules = ["jp_layout", "localize_reviews", "qa", "review_card", "translate_image"]

[tool.setuptools.packages.find]
include = ["evals*", "localization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv", "out"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
